feat: Visual improvements

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,10 @@
   body {
     @apply bg-slate-50 text-slate-900 antialiased;
   }
+
+  button {
+    @apply cursor-pointer;
+  }
 }
 
 .column-gradient {
